threshold of 0.1 fixes the transition problems on mobile - i added it to the about me page transition too. also i modified the width of the hamburger menu

--- a/src/HamburgerMenu.css
+++ b/src/HamburgerMenu.css
@@ -11,7 +11,7 @@
 } */
 
 #hamburger_menu {
-    width: 45px;
+    width: 35px;
     height: 45px;
     position: absolute;
     left: 10px;
